# ChangeLog for dev-python/pysqlite
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pysqlite/ChangeLog,v 1.83 2007/12/22 14:19:30 dertobi123 Exp $

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  pysqlite-2.3.5.ebuild:
  ppc stable, bug #202174

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> pysqlite-2.3.5.ebuild:
  Marked ~hppa too.

  13 Dec 2007; Samuli Suominen <drac@gentoo.org> pysqlite-2.3.5.ebuild:
  amd64 stable

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> pysqlite-2.3.5.ebuild:
  Stable on ppc64

  07 Nov 2007; Raúl Porcel <armin76@gentoo.org> pysqlite-2.3.5.ebuild:
  alpha/ia64/sparc/x86 stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  pysqlite-1.0.1.ebuild:
  ppc. stable

*pysqlite-2.3.5 (18 Jul 2007)

  18 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -pysqlite-2.3.4.ebuild, -pysqlite-2.3.4-r1.ebuild, +pysqlite-2.3.5.ebuild:
  Version bump. Dropped old versions.

  15 Jul 2007; Robert Buchholz <rbu@gentoo.org> pysqlite-1.0.1.ebuild:
  Adding ~ppc (bug #185160)

*pysqlite-2.3.4-r1 (07 Jul 2007)

  07 Jul 2007; Ali Polatel <hawking@gentoo.org> +pysqlite-2.3.4-r1.ebuild:
  revbump, fix encoding issues, use PYTHON_MODNAME, don't install tests

*pysqlite-2.3.4 (20 Jun 2007)

  20 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -pysqlite-2.3.1.ebuild, +pysqlite-2.3.4.ebuild:
  Version bump. Dropped old version.

  17 Jun 2007; Raúl Porcel <armin76@gentoo.org> pysqlite-2.3.3.ebuild:
  alpha/ia64/x86 stable wrt #182244

  17 Jun 2007; Markus Rothe <corsair@gentoo.org> pysqlite-2.3.3.ebuild:
  Stable on ppc64; bug #182244

  16 Jun 2007; Ferris McCormick <fmccor@gentoo.org> pysqlite-2.3.3.ebuild:
  Sparc stable --- Bug #182244 --- Runs tests and installs fine.

  16 Jun 2007; Christoph Mende <angelos@gentoo.org> pysqlite-2.3.3.ebuild:
  Stable on amd64 wrt bug 182244

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  pysqlite-2.3.3.ebuild: