@@ -1,6 +1,8 @@
 DIST pysqlite-2.3.3.tar.gz 60695 RMD160 285bcc2156061783e3a65d1fb4efe9551e2f86d4 SHA1 f6dda35c7c14454f3c91013691241a11d1228f77 SHA256 90ee3de57e92b268031cfc6d1239309ce628a2ef88708f6d471a976e810ffab8
 DIST pysqlite-2.3.5.tar.gz 85198 RMD160 ee9064b73f0ffc90bdf586b4534bd8c48bf4b440 SHA1 aede5abea1b0c84e030c175169e062f9d92c6b4e SHA256 074e88e14762cf25684658fbc893eb9f55cf4b9889b71f8aeee6e8992d3f33fe
+DIST pysqlite-2.4.0.tar.gz 84800 RMD160 10bacc078d484c2227b272ce59a286a25ca38196 SHA1 53720df970945e65466350e4bcd59b974e4e7500 SHA256 7e66c07d3eb93035f9272d01470e531a7c9f9d9751ad06f3a9c13b4f67c0a06a
 EBUILD pysqlite-2.3.3.ebuild 1173 RMD160 adc503d761f25c1a84a5af75947274613d1eaed4 SHA1 e93603015e41f6ca6dc524d4bdc256fd78e1b7b0 SHA256 218e18ffdf9c266a119c282fa9da621f5ebac40b6b9faf2d7a1864fae69f62dd
 EBUILD pysqlite-2.3.5.ebuild 1630 RMD160 552e8dfd8cbcebed4cadb9e71f90e2428f7f41b3 SHA1 c6cb9391734cd10c1b1a7fe6ad507fc84f1b0831 SHA256 83d0082bca922be57b541c0375218eb5cea7967fcdd2e3c5e945df9166c89faa
-MISC ChangeLog 10427 RMD160 abfc5b9332aa5da96d35d54a932f21219bf28a10 SHA1 7bfe97426c8ed0934012fbd0870e52a794f188a4 SHA256 b30bfc0128b3e87e35aecfd796eaface21317ee36c23c9411acecde7498207df
+EBUILD pysqlite-2.4.0.ebuild 1627 RMD160 8f9f491dbc3c51a1a49f491e6bfce9f1f5a529d4 SHA1 cd527c5aa3c881e5c060031b4ad2ebe959155992 SHA256 22d1dc593b500c6d4fcb425ada075f3108d75b5efdb39a5731e183b2f6273a92
+MISC ChangeLog 10544 RMD160 9a80030955d42c4d79e4433d6b36c82a29bb5ff1 SHA1 5be5ef2eefae4dd5b2c655c0af5ac51769b51e4c SHA256 62efceca69cc740be50b64da5028b393bd5c53f40a7fdfe2bb51bdc1ed4bee55
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
