@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pysqlite
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pysqlite/ChangeLog,v 1.83 2007/12/22 14:19:30 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pysqlite/ChangeLog,v 1.84 2007/12/26 01:25:57 hawking Exp $
+
+*pysqlite-2.4.0 (26 Dec 2007)
+
+  26 Dec 2007; Ali Polatel <hawking@gentoo.org> +pysqlite-2.4.0.ebuild:
+  Version bump.
 
   22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   pysqlite-2.3.5.ebuild:
